manifests/dev/romm/Deployment-romm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: romm
    app.kubernetes.io/name: romm
  name: romm
  namespace: romm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: romm
      app.kubernetes.io/name: romm
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: romm
        app.kubernetes.io/name: romm
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: DB_HOST
              value: mariadb.mariadb
            - name: DB_PORT
              value: "3306"
            - name: DB_NAME
              value: romm
            - name: DB_USER
              value: mariadb
            - name: DB_PASSWD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: romm-database-password
            - name: DATABASE_HOST
              value: mariadb.mariadb
            - name: DATABASE_PORT
              value: "3306"
            - name: DATABASE_NAME
              value: romm
            - name: DATABASE_USER
              value: mariadb
            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: romm-database-password
            - name: ROMM_AUTH_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  key: authSecretKey
                  name: romm-admin-password
            - name: ROMM_ADMIN_USERNAME
              valueFrom:
                secretKeyRef:
                  key: username
                  name: romm-admin-password
            - name: ROMM_ADMIN_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: romm-admin-password
            - name: ROMM_CONFIG_PATH
              value: /romm/config/config.yml
            - name: HOST
              value: 0.0.0.0
            - name: PORT
              value: "8080"
            - name: ROMM_HOST
              value: 0.0.0.0
            - name: ROMM_PORT
              value: "8080"
            - name: NGINX_PORT
              value: "8080"
            - name: GUNICORN_PORT
              value: "5000"
            - name: GUNICORN_HOST
              value: 127.0.0.1
            - name: IGDB_CLIENT_ID
              valueFrom:
                secretKeyRef:
                  key: igdbClientId
                  name: romm-metadata-secrets
            - name: IGDB_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  key: igdbClientSecret
                  name: romm-metadata-secrets
          image: ghcr.io/rommapp/romm:5.2.0
          imagePullPolicy: IfNotPresent
          name: romm
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 6379
              name: redis
              protocol: TCP
          volumeMounts:
            - mountPath: /romm/data
              name: data
            - mountPath: /romm/config
              name: config
            - mountPath: /romm/library
              name: library
            - mountPath: /romm/assets
              name: assets
            - mountPath: /romm/resources
              name: resources
      serviceAccountName: default
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: romm-romm-data
        - name: config
          persistentVolumeClaim:
            claimName: romm-romm-config
        - name: library
          persistentVolumeClaim:
            claimName: romm-library
        - name: assets
          persistentVolumeClaim:
            claimName: romm-assets
        - name: resources
          persistentVolumeClaim:
            claimName: romm-resources
