manifests/dev/romm/Ingress-romm-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: romm-local
  namespace: romm
spec:
  ingressClassName: traefik
  rules:
    - host: romm.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: romm
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - romm.home.kronkltd.net
