manifests/dev/romm/Ingress-romm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
spec:
  ingressClassName: traefik
  rules:
    - host: romm.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: romm
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - romm.home.kronkltd.net
